Module/4_security_group/main.tf
// Module : security_group

resource "aws_security_group" "example" {
  name        = "example"
  description = "Allow HTTP and HTTPS traffic"
  
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
